# rust-webgl-wasm-testing

./: Cargo.toml  README.md  maidfile.md
client/: Cargo.toml  index.html
client/src/: lib.rs  program_info.rs
client/src/shaders/: fragment.glsl
client/src/webgl/: matrix.rs  mod.rs  program_info.rs
client/src/webgl/shaders/: fragment.glsl  vertex.glsl
server/: Cargo.toml
